--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ff6060;
   background-color: #242424;
 
   font-synthesis: none;
@@ -17,19 +17,21 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ff6060;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #d45050;
 }
 
 body {
+  width: 100%;
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #ffffff;
 }
 
 h1 {
@@ -54,6 +56,14 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+#root {
+  width: 100%;
+}
+
+img {
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
