--- a/src/style/App.css
+++ b/src/style/App.css
@@ -30,7 +30,7 @@
 /* Main */
 .content-wrapper {
   width: 100%;
-  min-height: 60vh;
+  min-height: 120vh;
   margin: 5vh 0 5vh 0;
 }
 
@@ -46,6 +46,8 @@
   margin: auto;
   display: flex;
   align-items: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   width: 7vw;
 }
@@ -75,7 +77,6 @@
   position: relative;
   width: 100%;
   height: 14em;
-  background-image: url("src/assets/IMG.png");
   background-size: cover;
   border-radius: 25px;
   display: flex;
@@ -139,16 +140,13 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(0, 0, 0, 0.5) 100%
-  );
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
 .card img {
   height: 70%;
 }
+
 .card .content {
   position: relative;
   padding: 10px;
@@ -161,3 +159,238 @@
   font-size: 18px;
   font-weight: 500;
 }
+
+/* Accomodation Page */
+.carousel {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  height: 25rem;
+  border-radius: 25px;
+}
+.carousel .inner {
+  width: auto;
+  height: 100%;
+  display: inline-flex;
+  transition: all ease-in-out 0.25s;
+}
+.carousel .inner .item {
+  width: 80vw;
+}
+.carousel .inner .item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.carousel .next {
+  margin-right: 1rem;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  top: 0;
+  right: 0;
+}
+.carousel .next button {
+  transition: all ease-in-out 0.25s;
+}
+.carousel .next button:focus-visible {
+  outline: none;
+}
+.carousel .next button:focus {
+  outline: none;
+}
+.carousel .next button:hover {
+  border-color: transparent;
+  transform: scale(1.05);
+}
+.carousel .next .btn-next {
+  font-size: x-large;
+  z-index: 2;
+  width: auto;
+  height: 10vh;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../assets/Vector-1.svg");
+}
+.carousel .prev {
+  margin-left: 1rem;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.carousel .prev button {
+  transition: all ease-in-out 0.25s;
+}
+.carousel .prev button:focus-visible {
+  outline: none;
+}
+.carousel .prev button:focus {
+  outline: none;
+}
+.carousel .prev button:hover {
+  border-color: transparent;
+  transform: scale(1.05);
+}
+.carousel .prev .btn-prev {
+  font-size: x-large;
+  z-index: 2;
+  width: auto;
+  height: 10vh;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../assets/Vector.svg");
+}
+
+.accomodation-header {
+  margin-top: 3rem;
+  display: flex;
+  width: 100%;
+}
+.accomodation-header .block1 {
+  width: 50%;
+}
+.accomodation-header .block1 h1 {
+  font-weight: 500;
+  font-size: 30px;
+  margin: 0;
+}
+.accomodation-header .block1 p {
+  margin: 0.25rem 0 1rem 0;
+}
+.accomodation-header .block1 .tag-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.accomodation-header .block1 .tag {
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 14px;
+  color: white;
+  padding: 0.05rem 1.5rem 0.05rem 1.5rem;
+  border-radius: 10px;
+  min-width: 8rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #ff6060;
+  text-align: center;
+}
+.accomodation-header .block2 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.accomodation-header .block2 .host-block {
+  display: flex;
+}
+.accomodation-header .block2 .host-block p {
+  font-size: 18px;
+  padding: 1rem;
+  max-width: 8rem;
+  margin: auto;
+  overflow-wrap: break-word;
+}
+.accomodation-header .block2 .host-block .host-picture {
+  width: 65px;
+  height: 65px;
+  border-radius: 9999px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.accomodation-header .block2 .host-block .host-and-rate {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.accomodation-header .block2 .star-container {
+  margin-top: 1rem;
+  position: inline;
+  display: flex;
+  width: 10rem;
+  justify-content: space-between;
+  margin-left: auto;
+}
+.accomodation-header .block2 .star-container .colorful-start {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../assets/colorfulStar.svg");
+}
+.accomodation-header .block2 .star-container .gray-star {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../assets/grayStar.svg");
+}
+
+.accomodation-accordeon {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+details[open] .summary div {
+  transform: rotate(270deg);
+}
+
+.about-accordeon {
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
+  gap: 3rem;
+}
+
+.details {
+  width: 100%;
+}
+.details .content {
+  transform: translateY(-0.5rem);
+  padding: 2rem 1rem 1rem 1rem;
+  border-radius: 10px;
+  background-color: #f6f6f6;
+}
+.details .summary {
+  font-size: 18px;
+  position: relative;
+  z-index: 2;
+  padding: 0.75rem 1.25rem;
+  border-radius: 10px;
+  color: white;
+  background-color: #ff6060;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.details .summary p {
+  margin: 0;
+  padding: 0;
+}
+.details .summary div {
+  width: 20px;
+  height: 20px;
+  background-image: url("../assets/Vector-1.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  transform: rotate(90deg);
+}/*# sourceMappingURL=App.css.map */
