--- a/src/style/App.css
+++ b/src/style/App.css
@@ -27,23 +27,35 @@
   font-size: 24px;
 }
 
+/************************/
 /* Main */
 .content-wrapper {
   width: 100%;
   min-height: 120vh;
-  margin: 5vh 0 5vh 0;
+  margin: 7vh 0 7vh 0;
 }
 
+/************************/
 /* Footer */
 .footer {
+  padding: 1rem;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  height: 15vh;
+  height: auto;
   background-color: black;
+  padding: 2rem;
+}
+.footer p {
+  font-size: 24px;
+  color: #f6f6f6;
+  padding: 0;
+  margin: 1rem 0 0 0;
 }
 
 .logo-container-footer {
-  margin: auto;
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   height: -webkit-fit-content;
@@ -52,19 +64,21 @@
   width: 7vw;
 }
 
+/************************/
 /* 404 Page */
 .error-404 {
   text-align: center;
-  margin: 0px;
   font-size: 288px;
   font-weight: 700;
 }
 
 .subtitle {
   text-align: center;
+  font-weight: 500;
 }
 
 .back-to-home-404 {
+  font-size: 18px;
   margin-top: 20vh;
   text-align: center;
   text-decoration: underline;
@@ -72,12 +86,14 @@
   justify-content: center;
 }
 
+/************************/
 /* HomePage */
 .image-banner {
   position: relative;
   width: 100%;
   height: 14em;
   background-size: cover;
+  background-position: center;
   border-radius: 25px;
   display: flex;
   align-items: center;
@@ -130,7 +146,7 @@
   background-color: aqua;
   margin: 1.5em;
   background: #ff6060;
-  border-radius: 10px;
+  border-radius: 25px;
   overflow: hidden;
 }
 
@@ -160,6 +176,7 @@
   font-weight: 500;
 }
 
+/************************/
 /* Accomodation Page */
 .carousel {
   position: relative;
@@ -349,43 +366,32 @@
   gap: 2rem;
 }
 
-details[open] .summary div {
-  transform: rotate(270deg);
-}
-
-.about-accordeon {
-  display: flex;
-  flex-direction: column;
-  padding: 5rem;
-  gap: 3rem;
-}
-
-.details {
+details {
   width: 100%;
 }
-.details .content {
+details .content {
   transform: translateY(-0.5rem);
   padding: 2rem 1rem 1rem 1rem;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #f6f6f6;
 }
-.details .summary {
+details summary {
   font-size: 18px;
   position: relative;
   z-index: 2;
   padding: 0.75rem 1.25rem;
-  border-radius: 10px;
+  border-radius: 5px;
   color: white;
   background-color: #ff6060;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.details .summary p {
+details summary p {
   margin: 0;
   padding: 0;
 }
-.details .summary div {
+details summary div {
   width: 20px;
   height: 20px;
   background-image: url("../assets/Vector-1.svg");
@@ -393,4 +399,171 @@ details[open] .summary div {
   background-size: contain;
   background-position: center;
   transform: rotate(90deg);
+}
+
+details[open] summary div {
+  transform: rotate(270deg);
+}
+
+/************************/
+/* About Page */
+.about-accordeon {
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
+  gap: 2rem;
+}
+
+/************************/
+@media (max-width: 425px) {
+  /* Layout */
+  .layout-container {
+    width: 80vw;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  /* Header */
+  .logo-container-header {
+    width: 30vw;
+  }
+  .navlink {
+    padding: 1rem;
+    font-size: 12px;
+  }
+  /* Footer */
+  .footer p {
+    margin-top: 0.5rem;
+    font-size: 12px;
+  }
+  .logo-container-footer {
+    width: 20vw;
+  }
+  /* 404 */
+  .error-404 {
+    font-size: 128px;
+    margin-bottom: 0;
+  }
+  .back-to-home-404 {
+    font-size: 14px;
+  }
+  /* Accomodation Page */
+  .accomodation-header {
+    flex-direction: column;
+    width: 100%;
+  }
+  .accomodation-header .block1 {
+    width: 100%;
+  }
+  .accomodation-header .block1 h1 {
+    font-weight: 500;
+    font-size: 18px;
+    margin: 0;
+  }
+  .accomodation-header .block1 p {
+    font-size: 14px;
+    margin: 0.5rem 0 1rem 0;
+  }
+  .accomodation-header .block1 .tag {
+    margin-right: 1rem;
+    margin-bottom: 0.25rem;
+    font-size: 10px;
+    padding: 0rem 1rem 0rem 1rem;
+    min-width: 6rem;
+    border-radius: 5px;
+  }
+  .accomodation-header .block2 {
+    width: 100%;
+  }
+  .accomodation-header .block2 .host-and-rate {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+  }
+  .accomodation-header .block2 .host-block {
+    align-items: center;
+  }
+  .accomodation-header .block2 .host-block p {
+    font-size: 12px;
+    padding: 0.75rem;
+    max-width: 6rem;
+  }
+  .accomodation-header .block2 .host-block .host-picture {
+    width: 45px;
+    height: 45px;
+  }
+  .accomodation-header .block2 .star-container {
+    margin: 0;
+    align-items: center;
+    width: 6rem;
+  }
+  .accomodation-header .block2 .star-container .colorful-start {
+    width: 1rem;
+    height: 1rem;
+  }
+  .accomodation-header .block2 .star-container .gray-star {
+    width: 1rem;
+    height: 1rem;
+  }
+  .accomodation-accordeon {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  details summary {
+    font-size: 13px;
+  }
+  details .content {
+    font-size: 12px;
+  }
+  /* Home Page */
+  .image-banner {
+    height: 8em;
+    justify-content: flex-start;
+    border-radius: 10px;
+  }
+  .image-banner .overlay {
+    border-radius: 10px;
+  }
+  .image-banner h2 {
+    padding-left: 1.5rem;
+    font-size: 24px;
+    max-width: 52vw;
+  }
+  .cards-container {
+    margin-top: 1.5em;
+    background: rgba(0, 0, 0, 0);
+    display: block;
+    padding: 0em;
+  }
+  .card {
+    width: auto;
+    height: 250px;
+    margin: 0 0 1rem 0;
+    border-radius: 10px;
+  }
+  .card .content {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    height: 25%;
+    padding: 0;
+  }
+  .content p {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin: 0;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  /* About Page */
+  .about-accordeon {
+    padding: 2rem 0 0 0;
+  }
 }/*# sourceMappingURL=App.css.map */
