--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,3 +1,4 @@
+// DESKTOP
 .layout-container {
   min-height: 85vh;
   width: 80vw;
@@ -26,49 +27,64 @@
   padding: 1.5rem;
   font-size: 24px;
 }
+/************************/
 
 /* Main */
 .content-wrapper {
   width: 100%;
   min-height: 120vh;
-  margin: 5vh 0 5vh 0;
+  margin: 7vh 0 7vh 0;
 }
+/************************/
 
 /* Footer */
 .footer {
+  padding: 1rem;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  height: 15vh;
+  height: auto;
   background-color: black;
+  padding: 2rem;
+  p {
+    font-size: 24px;
+    color: #f6f6f6;
+    padding: 0;
+    margin: 1rem 0 0 0;
+  }
 }
 
 .logo-container-footer {
-  margin: auto;
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   height: fit-content;
   width: 7vw;
 }
+/************************/
 
 /* 404 Page */
 .error-404 {
   text-align: center;
-  margin: 0px;
   font-size: 288px;
   font-weight: 700;
 }
 
 .subtitle {
   text-align: center;
+  font-weight: 500;
 }
 
 .back-to-home-404 {
+  font-size: 18px;
   margin-top: 20vh;
   text-align: center;
   text-decoration: underline;
   display: flex;
   justify-content: center;
 }
+/************************/
 
 /* HomePage */
 .image-banner {
@@ -76,6 +92,7 @@
   width: 100%;
   height: 14em;
   background-size: cover;
+  background-position: center;
   border-radius: 25px;
   display: flex;
   align-items: center;
@@ -128,7 +145,7 @@
   background-color: aqua;
   margin: 1.5em;
   background: #ff6060;
-  border-radius: 10px;
+  border-radius: 25px;
   overflow: hidden;
 }
 
@@ -160,6 +177,7 @@
   font-size: 18px;
   font-weight: 500;
 }
+/************************/
 
 /* Accomodation Page */
 
@@ -347,33 +365,21 @@
   justify-content: space-between;
   gap: 2rem;
 }
-details[open] {
-  .summary {
-    div {
-      transform: rotate(270deg);
-    }
-  }
-}
-.about-accordeon {
-  display: flex;
-  flex-direction: column;
-  padding: 5rem;
-  gap: 3rem;
-}
-.details {
+
+details {
   width: 100%;
   .content {
     transform: translateY(-0.5rem);
     padding: 2rem 1rem 1rem 1rem;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #f6f6f6;
   }
-  .summary {
+  summary {
     font-size: 18px;
     position: relative;
     z-index: 2;
     padding: 0.75rem 1.25rem;
-    border-radius: 10px;
+    border-radius: 5px;
     color: white;
     background-color: #ff6060;
     display: flex;
@@ -392,5 +398,189 @@ details[open] {
       background-position: center;
       transform: rotate(90deg);
     }
+  }
+}
+details[open] {
+  summary {
+    div {
+      transform: rotate(270deg);
+    }
+  }
+}
+/************************/
+
+/* About Page */
+.about-accordeon {
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
+  gap: 2rem;
+}
+/************************/
+
+// Mobile
+@media (max-width: 425px) {
+  /* Layout */
+  .layout-container {
+    width: 80vw;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  /* Header */
+  .logo-container-header {
+    width: 30vw;
+  }
+  .navlink {
+    padding: 1rem;
+    font-size: 12px;
+  }
+  /* Footer */
+  .footer {
+    p {
+      margin-top: 0.5rem;
+      font-size: 12px;
+    }
+  }
+  .logo-container-footer {
+    width: 20vw;
+  }
+  /* 404 */
+  .error-404 {
+    font-size: 128px;
+    margin-bottom: 0;
+  }
+
+  .back-to-home-404 {
+    font-size: 14px;
+  }
+  /* Accomodation Page */
+
+  .accomodation-header {
+    flex-direction: column; //
+    width: 100%;
+    .block1 {
+      width: 100%; //
+      h1 {
+        font-weight: 500;
+        font-size: 18px;
+        margin: 0;
+      }
+      p {
+        font-size: 14px;
+        margin: 0.5rem 0 1rem 0;
+      }
+      .tag {
+        margin-right: 1rem;
+        margin-bottom: 0.25rem;
+        font-size: 10px;
+        padding: 0rem 1rem 0rem 1rem;
+        min-width: 6rem;
+        border-radius: 5px;
+      }
+    }
+    .block2 {
+      width: 100%; //
+      .host-and-rate {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+      }
+      .host-block {
+        align-items: center;
+        p {
+          font-size: 12px;
+          padding: 0.75rem;
+          max-width: 6rem;
+        }
+        .host-picture {
+          width: 45px;
+          height: 45px;
+        }
+      }
+
+      .star-container {
+        margin: 0;
+        align-items: center;
+        width: 6rem;
+        .colorful-start {
+          width: 1rem;
+          height: 1rem;
+        }
+        .gray-star {
+          width: 1rem;
+          height: 1rem;
+        }
+      }
+    }
+  }
+  .accomodation-accordeon {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  details {
+    summary {
+      font-size: 13px;
+    }
+    .content {
+      font-size: 12px;
+    }
+  }
+
+  /* Home Page */
+  .image-banner {
+    height: 8em;
+    justify-content: flex-start;
+    border-radius: 10px;
+  }
+
+  .image-banner .overlay {
+    border-radius: 10px;
+  }
+
+  .image-banner h2 {
+    padding-left: 1.5rem;
+    font-size: 24px;
+    max-width: 52vw;
+  }
+
+  .cards-container {
+    margin-top: 1.5em;
+    background: #00000000;
+    display: block;
+    padding: 0em;
+  }
+  .card {
+    width: auto;
+    height: 250px;
+    margin: 0 0 1rem 0;
+    border-radius: 10px;
+  }
+
+  .card .content {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    height: 25%;
+    padding: 0;
+  }
+
+  .content p {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin: 0;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  /* About Page */
+  .about-accordeon {
+    padding: 2rem 0 0 0;
   }
 }
